--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Lista de Compras</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Sign In</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<header class="header">
+  <h1>Lista de Compras</h1>
+  <input class="new-todo" placeholder="Adicione um item" autofocus="" [(ngModel)]="compra.texto" (keyup.enter)="addCompra()">
+</header>
