--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<section class="todoapp">
-    <app-header (add)="onAddCompra($event)"></app-header>
-    <app-compra-list [compras]="compras" (toggleCompletada)="onToggleCompraCompletada($event)" (remove)="onRemoveCompra($event)"></app-compra-list>
-    <app-footer [compras]="compras"></app-footer>
-</section>
+<router-outlet></router-outlet>
