--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,3 @@
-<header class="header">
-  <h1>Lista de Compras</h1>
-  <input class="new-todo" placeholder="Adicione um item" autofocus="" [(ngModel)]="compra.texto" (keyup.enter)="addCompra()">
+<header>
+  <input class="form-control" placeholder="Adicione um item" autofocus="" [(ngModel)]="compra.texto" (keyup.enter)="addCompra()">
 </header>
