--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,6 @@
-<footer class="footer" *ngIf="compras.length > 0">
-  <span class="compra-count"><strong>{{compras.length}}</strong> {{compras.length == 1 ? 'item' : 'itens'}} faltando</span>
+<footer class="p-2" *ngIf="compras.length > 0">
+  <span class="h6">
+    <strong>{{ getComprasNaoCompletadas()}}</strong> {{getComprasNaoCompletadas()
+    === 1 ? 'item' : 'itens'}} faltando
+  </span>
 </footer>
