--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,34 +1,42 @@
-<div class="sign-in-wrapper">
+<div class="container">
+  <h1 class="mx-auto text-center display-4 pt-3 pb-5">Lista de Compras</h1>
   <form [formGroup]="frm">
-
-    <h1>Lista de Compras</h1>
-
-    <input type="text" formControlName="username" placeholder="Email">
-
-    <div class="input-errors" *ngIf="(frm.get('username').invalid && frm.get('username').touched) || showInputErrors">
-      <div *ngIf="frm.get('username').hasError('required')">
-        Por favor, insira o seu usuário
+    <div class="form-group row">
+      <div class="col-sm-6 mx-auto">
+        <label for="usernameInput">Email</label>
+        <input class="form-control" type="text" id="usernameInput" formControlName="username" placeholder="Email">
+        <div class="input-errors" *ngIf="(frm.get('username').invalid && frm.get('username').touched) || showInputErrors">
+          <div class="px-2" *ngIf="frm.get('username').hasError('required')">
+            <small>Por favor, insira seu email</small>
+          </div>
+        </div>
       </div>
     </div>
 
-    <input type="password" formControlName="password" placeholder="Senha">
-
-    <div class="input-errors" *ngIf="(frm.get('password').invalid && frm.get('password').touched) || showInputErrors">
-      <div *ngIf="frm.get('password').hasError('required')">
-        Por favor, insira sua senha
+    <div class="form-group row">
+      <div class="col-sm-6 mx-auto">
+        <label for="passwordInput">Senha</label>
+        <input class="form-control" type="password" id="passwordInput" formControlName="password" placeholder="Senha">
+        <div class="input-errors" *ngIf="(frm.get('password').invalid && frm.get('password').touched) || showInputErrors">
+          <div class="px-2" *ngIf="frm.get('password').hasError('required')">
+            <small>Por favor, insira sua senha</small>
+          </div>
+        </div>
+        <div class="p-2 text-danger" *ngIf="hasFailed">
+          Email ou senha inválidos
+        </div>
       </div>
     </div>
 
-    <div class="sign-in-error" *ngIf="hasFailed">
-      Usuário e senha inválidos
+    <div class="row justify-content-center">
+      <button type="button" class="btn btn-primary btn-lg" (click)="doSignIn()" [disabled]="isBusy">
+        Entrar
+      </button>
     </div>
 
-    <button (click)="doSignIn()" [disabled]="isBusy">
-      <ng-template [ngIf]="!isBusy">Entrar</ng-template>
-      <ng-template [ngIf]="isBusy">Entrando, por favor espere...</ng-template>
-    </button>
-
-    <a routerLink="/sign-up" routerLinkActive="active">Não é cadastrado? Registre-se aqui</a>
-
+    <div class="row justify-content-center">
+      <a class="p-2" routerLink="/sign-up" routerLinkActive="active">Não é cadastrado? Registre-se
+        aqui</a>
+    </div>
   </form>
 </div>
