--- a/src/app/compras/compras.component.html
+++ b/src/app/compras/compras.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-end pt-2 pr-2">
-    <a class="btn btn-sm btn-outline-dark" routerLink="/login" routerLinkActive="active">Sair</a>
+    <a class="btn btn-sm btn-outline-dark" (click)="onSair()">Sair</a>
   </div>
 
   <h1 class="mx-auto text-center display-4 pb-5">Lista de Compras</h1>
