diminue distanciamento do texto do botao de check

--- a/src/app/compra-list/compra-list-item/compra-list-item.component.html
+++ b/src/app/compra-list/compra-list-item/compra-list-item.component.html
@@ -7,7 +7,7 @@
           <fa-icon [icon]="['far', 'circle']"></fa-icon>
         </ng-template>
       </button>
-      <span class="pl-2" [class.completada]="compra.completada">
+      <span [class.completada]="compra.completada">
         {{compra.texto}}
       </span>
     </form>
