--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,3 @@
-<p>We are sorry, the requested page could not be found.</p>
+<div class="vertical-center">
+    <h1 class="mx-auto text-center">Página indisponível. Lamentamos o transtorno.</h1>
+</div>
