detalhe de layout no botao de editar

--- a/src/app/compra-list/compra-list-item/compra-list-item.component.html
+++ b/src/app/compra-list/compra-list-item/compra-list-item.component.html
@@ -19,7 +19,8 @@
   </div>
 
   <div class="pr-2 d-flex align-self-center flex-nowrap">
-    <button type="button" class="btn btn-outline-primary btn-sm mr-2" (click)="toggleEditar()">
+    <button type="button" class="btn btn-sm mr-2" [ngClass]="{'btn-outline-primary': !editando, 'btn-primary': editando}"
+      (click)="toggleEditar()">
       <fa-icon icon="pen"></fa-icon>
     </button>
     <button *ngIf="!editando" type="button" class="btn btn-outline-dark btn-sm" (click)="removeCompra(compra)">
